# std-generator-examples

./: BatchedGeneratorProfile.cpp  CMakeLists.txt  ExpressionsMain.cpp  IndirectIota.cpp  IndirectIota.h  README.md  batched_generator.h  binary_expression.h  fibonacci_generator.cpp  generator_benchmark.cpp  simple_generator.h  simple_generator_no_copies.h
